<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    >

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"

            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:gravity="center_horizontal"

                />

            <ImageView

                android:id="@+id/dividerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/empty"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/div"

                />

            <Button

                android:id="@+id/signInButton"
                android:layout_width="175dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/green_btn"
                android:text="@string/sign_in"
                android:textColor="@color/white"

                />

            <Button

                android:id="@+id/signUpButton"
                android:layout_width="175dp"
                android:layout_height="42dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/green_btn"
                android:text="@string/sign_up"
                android:textColor="@color/white"

                />

            <ImageView

                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/div"
                android:contentDescription="@string/empty"

                />

            <TextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/lightgray"
                android:textSize="12sp"
                android:text="@string/made_by_lukatjee"

                />

            <ProgressBar

                android:id="@+id/progressBarOne"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"

                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>