<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_constraintVertical_chainStyle="packed"

    >

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"

            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:gravity="center_horizontal"

                />

            <ImageView

                android:id="@+id/dividerSixteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/empty"

                />

            <EditText

                android:id="@+id/emailEt"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:autofillHints=" "
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/input_fields"
                android:ems="10"
                android:hint="@string/e_mail"
                android:textColorHint="@color/lightgray"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp"

                />

            <EditText

                android:id="@+id/passwordEt"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="5dp"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:autofillHints=" "
                android:background="@drawable/input_fields"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/lightgray"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp"

                />

            <ImageView

                android:id="@+id/divSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/div"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/empty"

                />

            <Button

                android:id="@+id/signInBtn"
                android:layout_width="175dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/green_btn"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="14sp"

                />

            <TextView

                android:id="@+id/resetPasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pin"
                android:textColor="@color/white"
                android:gravity="center_horizontal"

                />

            <ProgressBar

                android:id="@+id/progressBarTwo"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"

                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>